--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ packages = [{include = "goit_web_hw11", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.97.0"
+uvicorn = {extras = ["standart"], version = "^0.22.0"}
+sqlalchemy = "^2.0.16"
+psycopg2-binary = "^2.9.6"
+alembic = "^1.11.1"
 
 
 [build-system]
