--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standart"], version = "^0.22.0"}
 sqlalchemy = "^2.0.16"
 psycopg2-binary = "^2.9.6"
 alembic = "^1.11.1"
+pydantic = {extras = ["email"], version = "^1.10.9"}
 
 
 [build-system]
