--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sqlalchemy = "^2.0.16"
 psycopg2-binary = "^2.9.6"
 alembic = "^1.11.1"
 pydantic = {extras = ["email"], version = "^1.10.9"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bscrypt"], version = "^1.7.4"}
 
 
 [build-system]
