--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ alembic = "^1.11.1"
 pydantic = {extras = ["email"], version = "^1.10.9"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bscrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
