--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bscrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 fastapi-mail = "^1.3.0"
+fastapi-limiter = "^0.1.5"
 
 
 [build-system]
