--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ passlib = {extras = ["bscrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 fastapi-mail = "^1.3.0"
 fastapi-limiter = "^0.1.5"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
