--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ fastapi-mail = "^1.3.0"
 fastapi-limiter = "^0.1.5"
 python-dotenv = "^1.0.0"
 libgravatar = "^1.0.4"
+cloudinary = "^1.33.0"
 
 
 [build-system]
