--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,15 @@ libgravatar = "^1.0.4"
 cloudinary = "^1.33.0"
 
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^4.1.0"
+pytest = "^7.4.0"
+sphinx = "^7.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
