--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,12 @@ services:
     restart: always
     ports:
       - 6379:6379
+  test-database:
+    image: 'postgres:latest'
+    ports:
+      - 5434:5432
+    environment:
+      POSTGRES_DB: test
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
 
