--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ fastapi-limiter = "^0.1.5"
 python-dotenv = "^1.0.0"
 libgravatar = "^1.0.4"
 cloudinary = "^1.33.0"
+python-benedict = "^0.31.0"
 
 
 
