--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,12 @@ httpx = "^0.24.1"
 
 
 
+
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.1.0"
 pytest = "^7.4.0"
 sphinx = "^7.0.1"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
